Refactoring : Remove a bunch of guava collections usages